Adding connection to Firebase and making first requests from app

--- a/QueensLeagueResults/en.lproj/Localizable.strings
+++ b/QueensLeagueResults/en.lproj/Localizable.strings
@@ -7,4 +7,6 @@
 */
 
 "results_bottomBar" = "Results";
+"clasification_bottomBar" = "Clasification";
 "teams_bottomBar" = "Teams";
+"game_finished" = "FINAL";
